all links and scripts

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,10 +6,12 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<link
+		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        
 		<!-- CSS here -->
 		<link rel="stylesheet" href={{ asset("assets/css/bootstrap.min.css")}}>
-        <link rel="stylesheet" href={{ asset("assets/css/owl.carousel.min.css")}}>
+		<link rel="stylesheet" href={{ asset("assets/css/owl.carousel.min.css")}}>
 		<link rel="stylesheet" href={{ asset("assets/css/flaticon.css")}}>
 		<link rel="stylesheet" href={{ asset("assets/css/slicknav.css")}}>
 		<link rel="stylesheet" href={{ asset("assets/css/animate.min.css")}}>
@@ -19,6 +21,45 @@
 		<link rel="stylesheet" href={{ asset("assets/css/slick.css")}}>
 		<link rel="stylesheet" href={{ asset("assets/css/nice-select.css")}}>
 		<link rel="stylesheet" href={{ asset("assets/css/style.css")}}>
+
+        <!-- Main JS -->
+		<script src={{ asset("assets/js/main.js")}}></script>
+
+		<!-- JS here -->
+		<script src={{ asset("assets/js/vendor/modernizr-3.5.0.min.js")}}></script>
+
+		<!-- Jquery, Popper, Bootstrap -->
+		<script src={{ asset("assets/js/vendor/jquery-1.12.4.min.js")}}></script>
+		<script src={{ asset("assets/js/popper.min.js")}}></script>
+		<script src={{ asset("assets/js/bootstrap.min.js")}}></script>
+
+		<!-- Jquery Mobile Menu -->
+		<script src={{ asset("assets/js/jquery.slicknav.min.js")}}></script>
+
+		<!-- Jquery Slick , Owl-Carousel Plugins -->
+		<script src={{ asset("assets/js/owl.carousel.min.js")}}></script>
+		<script src={{ asset("assets/js/slick.min.js")}}></script>
+
+		<!-- One Page, Animated-HeadLin -->
+		<script src={{ asset("assets/js/wow.min.js")}}></script>
+		<script src={{ asset("assets/js/animated.headline.js")}}></script>
+		<script src={{ asset("assets/js/jquery.magnific-popup.js")}}></script>
+
+		<!-- Scrollup, nice-select, sticky -->
+		<script src={{ asset("assets/js/jquery.scrollUp.min.js")}}></script>
+		<script src={{ asset("assets/js/jquery.nice-select.min.js")}}></script>
+		<script src={{ asset("assets/js/jquery.sticky.js")}}></script>
+
+		<!-- contact js -->
+		<script src={{ asset("assets/js/contact.js")}}></script>
+		<script src={{ asset("assets/js/jquery.form.js")}}></script>
+		<script src="./assets/js/jquery.validate.min.js"></script>
+		<script src={{ asset("assets/js/jquery.validate.min.js")}}></script>
+		<script src={{ asset("assets/js/jquery.ajaxchimp.min.js")}}></script>
+
+		<!-- Jquery Plugins, main Jquery -->
+		<script src={{ asset("assets/js/plugins.js")}}></script>
+		<script src={{ asset("assets/js/main.js")}}></script>
 
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
